add client section

--- a/hire.html
+++ b/hire.html
@@ -42,112 +42,169 @@
 	 	</div>
 		<div class="section">
 			<span id="bigger">Tech stack</span>
-			<ul class="client-list">
-				<li class="client-list__item">
-					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="images/tech/sql.png" class="client-list__logo" alt="SQL" loading="lazy" target="_blank"></a>
+			<ul class="icon_list">
+				<li class="icon_list__element">
+					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank">
+						<img src="images/tech/sql.png" class="icon_list__logo" alt="SQL" loading="lazy">
+					</a>
 				</li>
-					<a href="https://www.python.org" target="_blank"><img src="images/tech/python.png" class="client-list__logo" alt="python" loading="lazy" target="_blank"></a>
+				<li class="icon_list__element">
+					<a href="https://www.python.org" target="_blank">
+						<img src="images/tech/python.png" class="icon_list__logo" alt="python" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com" target="_blank"><img src="images/tech/gcp.png" class="client-list__logo" alt="gcp" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://cloud.google.com" target="_blank">
+						<img src="images/tech/gcp.png" class="icon_list__logo" alt="gcp" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://www.google.com/sheets/about/" target="_blank"><img src="images/tech/sheet.png" class="client-list__logo" alt="sheet" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://www.google.com/sheets/about/" target="_blank">
+						<img src="images/tech/sheet.png" class="icon_list__logo" alt="sheet" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://developers.google.com/apps-script" target="_blank"><img src="images/tech/app_script.png" class="client-list__logo" alt="app_script" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://developers.google.com/apps-script" target="_blank">
+						<img src="images/tech/app_script.png" class="icon_list__logo" alt="app_script" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com/dataprep" target="_blank"><img src="images/tech/dataprep.png" class="client-list__logo" alt="dataprep" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://cloud.google.com/dataprep" target="_blank">
+						<img src="images/tech/dataprep.png" class="icon_list__logo" alt="dataprep" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://datastudio.google.com" target="_blank"><img src="images/tech/datastudio.png" class="client-list__logo" alt="datastudio" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://datastudio.google.com" target="_blank">
+						<img src="images/tech/datastudio.png" class="icon_list__logo" alt="datastudio" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://colab.research.google.com" target="_blank"><img src="images/tech/colab.png" class="client-list__logo" alt="colab" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://colab.research.google.com" target="_blank">
+						<img src="images/tech/colab.png" class="icon_list__logo" alt="colab" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://developers.google.com/web/tools/chrome-devtools" target="_blank"><img src="images/tech/chrome.png" class="client-list__logo" alt="chrome" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://developers.google.com/web/tools/chrome-devtools" target="_blank">
+						<img src="images/tech/chrome.png" class="icon_list__logo" alt="chrome" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com/functions" target="_blank"><img src="images/tech/cloud_functions.png" class="client-list__logo" alt="cloud_functions" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://cloud.google.com/functions" target="_blank">
+						<img src="images/tech/cloud_functions.png" class="icon_list__logo" alt="cloud_functions" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com/bigquery" target="_blank"><img src="images/tech/bigquery.png" class="client-list__logo" alt="bigquery" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://cloud.google.com/bigquery" target="_blank">
+						<img src="images/tech/bigquery.png" class="icon_list__logo" alt="bigquery" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://analytics.google.com" target="_blank"><img src="images/tech/googleanalytics.png" class="client-list__logo" alt="googleanalytics" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://analytics.google.com" target="_blank">
+						<img src="images/tech/googleanalytics.png" class="icon_list__logo" alt="googleanalytics" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://ads.google.com" target="_blank"><img src="images/tech/ads.png" class="client-list__logo" alt="ads" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://ads.google.com" target="_blank">
+						<img src="images/tech/ads.png" class="icon_list__logo" alt="ads" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://www.google.com/drive/" target="_blank"><img src="images/tech/drive.png" class="client-list__logo" alt="drive" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://www.google.com/drive/" target="_blank">
+						<img src="images/tech/drive.png" class="icon_list__logo" alt="drive" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://firebase.google.com" target="_blank"><img src="images/tech/firebase.png" class="client-list__logo" alt="firebase" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://firebase.google.com" target="_blank">
+						<img src="images/tech/firebase.png" class="icon_list__logo" alt="firebase" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com/shell" target="_blank"><img src="images/tech/googleshell.png" class="client-list__logo" alt="googleshell" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://cloud.google.com/shell" target="_blank">
+						<img src="images/tech/googleshell.png" class="icon_list__logo" alt="googleshell" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://pandas.pydata.org" target="_blank"><img src="images/tech/pandas.png" class="client-list__logo" alt="pandas" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://pandas.pydata.org" target="_blank">
+						<img src="images/tech/pandas.png" class="icon_list__logo" alt="pandas" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://jupyter.org" target="_blank"><img src="images/tech/jupyter.png" class="client-list__logo" alt="jupyter" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://jupyter.org" target="_blank">
+						<img src="images/tech/jupyter.png" class="icon_list__logo" alt="jupyter" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://pypi.org/project/beautifulsoup4/#description" target="_blank"><img src="images/tech/beautifulsoup.png" class="client-list__logo" alt="beautifulsoup" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://pypi.org/project/beautifulsoup4/#description" target="_blank">
+						<img src="images/tech/beautifulsoup.png" class="icon_list__logo" alt="beautifulsoup" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://requests.readthedocs.io/en/master/" target="_blank"><img src="images/tech/requests.png" class="client-list__logo" alt="requests" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://requests.readthedocs.io/en/master/" target="_blank">
+						<img src="images/tech/requests.png" class="icon_list__logo" alt="requests" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://selenium-python.readthedocs.io" target="_blank"><img src="images/tech/selenium.png" class="client-list__logo" alt="selenium" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://selenium-python.readthedocs.io" target="_blank">
+						<img src="images/tech/selenium.png" class="icon_list__logo" alt="selenium" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://zapier.com" target="_blank"><img src="images/tech/zapier.png" class="client-list__logo" alt="zapier" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://zapier.com" target="_blank">
+						<img src="images/tech/zapier.png" class="icon_list__logo" alt="zapier" loading="lazy">
+					</a>
 				</li>
-				<li class="client-list__item">
-					<a href="https://github.com" target="_blank"><img src="images/tech/github.png" class="client-list__logo" alt="github" loading="lazy"></a>
+				<li class="icon_list__element">
+					<a href="https://github.com" target="_blank">
+						<img src="images/tech/github.png" class="icon_list__logo" alt="github" loading="lazy">
+					</a>
 				</li>
 			</ul>
 		</div>
-		<h3>Trusted by:</h3>
-		<ul>
-			<li>
-				<a>Guess Europe</a>
-			</li>
-			<li>
-				<a>Scarosso</a>
-			</li>
-			<li>
-				<a>Nu3</a>
-			</li>
-			<li>
-				<a>Bitbond</a>
-			</li>
-			<li>
-				<a>Internetstores</a>
-			</li>
-			<li>
-				<a>Auto1</a>
-			</li>
-			<li>
-				<a>Bitbond</a>
-			</li>
-			<li>
-				<a>RecRicht</a>
-			</li>
-			<li>
-				<a>Caroobi</a>
-			</li>
-			<li>
-				<a>Hanwree</a>
-			</li>
-		</ul>
-
-
+		<div class="section">
+			<span id="bigger">Trusted by</span>
+			<ul class="icon_list">
+				<li class="icon_list__element">
+					<a href="https://www.guess.eu" target="_blank">
+						<img src="images/client/guess.png" class="icon_list__logo" alt="guess" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://www.scarosso.com/de/" target="_blank">
+						<img src="images/client/scarosso.png" class="icon_list__logo" alt="scarosso" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://www.nu3.de" target="_blank">
+						<img src="images/client/nu3.png" class="icon_list__logo" alt="nu3" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://www.bitbond.com" target="_blank">
+						<img src="images/client/bitbond.png" class="icon_list__logo" alt="bitbond" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://www.internetstores.com/en/" target="_blank">
+						<img src="images/client/internetstores.png" class="icon_list__logo" alt="internetstores" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://www.auto1.com" target="_blank">
+						<img src="images/client/auto1.png" class="icon_list__logo" alt="auto1" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://recright-personalberatung.de" target="_blank">
+						<img src="images/client/recright.png" class="icon_list__logo" alt="recright" loading="lazy">
+					</a>
+				</li>
+				<li class="icon_list__element">
+					<a href="https://caroobi.com" target="_blank">
+						<img src="images/client/caroobi.png" class="icon_list__logo" alt="caroobi" loading="lazy">
+					</a>
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
 
