--- a/hire.html
+++ b/hire.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
 	<head>
 		<title>Data Engineering - Analytics - Design</title>
+	    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     	<link rel="stylesheet" href="hire.css"/>
 	</head>
 	<body>
