--- a/hire.html
+++ b/hire.html
@@ -6,43 +6,75 @@
     	<link rel="stylesheet" href="hire.css"/>
 	</head>
 	<body>
-		<header>
-			<div id="header_separator"></div>
-			<div id="main_title">
-				<div class="a" ><b>Data</b> Analytics</div>
-				<div class="e"><b>Data</b> Engineering</div>
-				<div class="d"><b>Data</b> Design</div>
-			</div>
-			<div id="header_separator"></div>
-		</header>
+		<div class="main_title_separator"></div>
+		<div class="main_title h1">
+			<b>Data</b> Engineering<br>
+			<b>‎‎‏‏‎Data</b> Analytics<br>
+			<b>‏‏‎‏‎Data</b> Design
+		</div>
+		<div class="main_title_separator"></div>
 		<div class="section">
-			<p>
-				<span id="bigger">Audits</span><br>
+			<div class="fields">
+				<div>
+					<b>
+						<span class="h2">
+							Engineering
+						</span>
+					</b>
+					<span class="h3">
+						Data into information
+					</span>
+				</div>
+				<div>
+					<b>
+						<span class="h2">
+							Analytics
+						</span>
+					</b>
+					<span class="h3">
+						Information into insight.
+					</span>
+				</div>
+				<div>
+					<b>
+						<span class="h2">
+							Design
+						</span>
+					</b>
+					<span class="h3">
+						Insight into knowledge.
+					</span>
+				</div>
+		 	</div>
+		</div>
+		<div class="section">
+			<p class="service">
+				<div class="h2">Audits</div><br>
 				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
 				In a fast-paced environment rarely it is possible to move things forward 
 				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
 				often just observing things from different point of views.
 				Let's discover together how to increase your efficiency.
 			</p>
-			<p>
-				<span id="bigger">Consultancy</span><br>
+			<p class="service">
+				<div class="h2">Consultancy</div><br>
 				<b>Are you satisfied about how your organisation consumes data?</b><br>
 				How much does a manual and repetitive data manipulation cost you?
 				Are there inefficiencies hidden within your processes?
 				How much knowledge is lost because of lack of fluidity?
 				Let's dive into these questions to find out answers and more opportunities.
 			</p>
-			<p>
-				<span id="bigger">Training</span><br>
+			<p class="service">
+				<div class="h2">Training</div><br>
 				<b>Leaders let actions speak by themselves.</b><br>
 				Allow your team to be self-sufficient,
 				with the ability to build and maintain your own custom solutions.
 				A homogeneous technical growth with the implicit goal to implement a true data driven culture.
 				Talk less, build more. Never take a non data-drive decision again.
-	 		</p>
+			</p>
 	 	</div>
 		<div class="section">
-			<span id="bigger">Tech stack</span>
+			<div class="h2">Tech stack</div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank">
@@ -162,7 +194,7 @@
 			</ul>
 		</div>
 		<div class="section">
-			<span id="bigger">Trusted by</span>
+			<div class="h2">Trusted by</div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://www.guess.eu" target="_blank">
