--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <header>
-      <div id="header_separator"></div>
-      <div id="header_main"></div>      
-        <p id="main_title">
+      <div class="header_separator"></div>
+      <div class="header_main"></div>      
+        <p class="main_title">
           Roberto Malcotti
         </p>
           <a href="#Contact">Contact</a><br>
@@ -19,10 +19,10 @@
           <a href="#Languages">Languages</a><br>
           <a href="#Hire">Hire me</a>
       </div>
-      <div id="header_separator"></div>
+      <div class="header_separator"></div>
     </header>
-    <div id="intro">
-      <p id="content">
+    <div class="intro">
+      <p class="content">
         Roberto is a digital native with 10 years of professional experience in the field of data,
         intersecting engineering, analytics and design.
         He owns a Bachelor degree in Management Engineering from
@@ -41,10 +41,10 @@
         Contact
       </div>
       <div style="text-align:center">
-        <p id="content">
+        <p class="content">
           robimalco (at) gmail (dot) com
         </p>
-        <p id="content">
+        <p class="content">
             <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter" target="_blank"></a>
             <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook" target="_blank"></a>
             <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin" target="_blank"></a>
@@ -58,7 +58,7 @@
       <div class="sub_title">
         Technology
       </div>
-      <p id="content">
+      <p class="content">
         Technology is shaping any thinkable area.
         Roberto has the opportunity to ride this wave making a living out of it.
         Back in 2012, a data expert was appetibile on the market if proficient with Microsoft Excel.
@@ -72,7 +72,7 @@
       <div class="sub_title">
         Creativity
       </div>
-      <p id="content">
+      <p class="content">
         A profile can acquire technical skills in multiple ways.
         Firstly, with academical education, secondly with work experience,
         thirdly following ad-hoc courses, lastly, developing personal projects.
@@ -88,7 +88,7 @@
       <div class="sub_title">
         Languages
       </div>
-      <p id="content">
+      <p class="content">
         Roberto considers languages the most valuable asset an individual might have.  
         He utopically believes that if any human being would be able to speak any language,
         wars and inequalities would disappear.
@@ -103,7 +103,7 @@
       <div class="sub_title">
         Hire me
       </div>
-      <p id="content">
+      <p class="content">
         Starting a new project, interacting with people, understanding requirements,
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is de facto standard.
