add viewport and meta description

--- a/hire.html
+++ b/hire.html
@@ -2,6 +2,8 @@
 <html lang="en-GB">
 	<head>
 		<title>Data Engineering - Analytics - Design</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
 	    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     	<link rel="stylesheet" href="hire.css"/>
 	</head>
@@ -71,6 +73,13 @@
 				with the ability to build and maintain your own custom solutions.
 				A homogeneous technical growth with the implicit goal to implement a true data driven culture.
 				Talk less, build more. Never take a non data-drive decision again.
+			</p>
+	 	</div>
+		<div class="section">
+			<p class="service">
+				<div class="h2">Hands on</div><br>
+				<b>What can i do in practice</b><br>
+				Provide examples
 			</p>
 	 	</div>
 		<div class="section">
