--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
   <head>
     <title>Roberto Malcotti</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Roberto Malcotti" content="Meet Roberto and learn more about him.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
