--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           robimalco (at) gmail (dot) com
         </p>
         <p class="content">
-            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter" target="_blank"></a>
-            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook" target="_blank"></a>
-            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin" target="_blank"></a>
-            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube" target="_blank"></a>
-            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud" target="_blank"></a>
-            <a href="https://github.com/robimalco" class="fa fa-github" target="_blank"></a>
+            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter" target="_blank" rel="noopener"></a>
+            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook" target="_blank" rel="noopener"></a>
+            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin" target="_blank" rel="noopener"></a>
+            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube" target="_blank" rel="noopener"></a>
+            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud" target="_blank" rel="noopener"></a>
+            <a href="https://github.com/robimalco" class="fa fa-github" target="_blank" rel="noopener"></a>
         </p>
       </div>
     </div>
@@ -110,7 +110,7 @@
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is de facto standard.
         In this hyper connected world, along this rollercoast, having trustful partners is a must.<br>
-        <a href="hire.html" target="_blank">Find out more.</a>
+        <a href="hire.html" target="_blank" rel="noopener">Find out more.</a>
       </p>
     </div>
   <div></div>
