pages ready for next one

--- a/hire.html
+++ b/hire.html
@@ -34,7 +34,7 @@
 						</span>
 					</b>
 					<span class="h3">
-						Information into insight.
+						Information into insights
 					</span>
 				</div>
 				<div>
@@ -44,14 +44,14 @@
 						</span>
 					</b>
 					<span class="h3">
-						Insight into knowledge.
+						Insights into knowledge
 					</span>
 				</div>
 		 	</div>
 		</div>
 		<div class="section">
 			<p class="service">
-				<div class="h2">Audits</div><br>
+				<div class="h2"><b>Audits</b></div><br>
 				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
 				In a fast-paced environment rarely it is possible to move things forward 
 				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
@@ -59,7 +59,7 @@
 				Let's discover together how to increase your efficiency.
 			</p>
 			<p class="service">
-				<div class="h2">Consultancy</div><br>
+				<div class="h2"><b>Consultancy</b></div><br>
 				<b>Are you satisfied about how your organisation consumes data?</b><br>
 				How much does a manual and repetitive data manipulation cost you?
 				Are there inefficiencies hidden within your processes?
@@ -67,7 +67,7 @@
 				Let's dive into these questions to find out answers and more opportunities.
 			</p>
 			<p class="service">
-				<div class="h2">Training</div><br>
+				<div class="h2"><b>Training</b></div><br>
 				<b>Leaders let actions speak by themselves.</b><br>
 				Allow your team to be self-sufficient,
 				with the ability to build and maintain your own custom solutions.
@@ -76,14 +76,7 @@
 			</p>
 	 	</div>
 		<div class="section">
-			<p class="service">
-				<div class="h2">Hands on</div><br>
-				<b>What can i do in practice</b><br>
-				Provide examples
-			</p>
-	 	</div>
-		<div class="section">
-			<div class="h2">Tech stack</div>
+			<div class="h2"><b>Tech stack</b></div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener">
@@ -203,7 +196,7 @@
 			</ul>
 		</div>
 		<div class="section">
-			<div class="h2">Trusted by</div>
+			<div class="h2"><b>Trusted by</b></div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://www.guess.eu" target="_blank" rel="noopener">
@@ -247,6 +240,11 @@
 				</li>
 			</ul>
 		</div>
+		<div class="section">
+			<p class="service">
+				<div class="h2"><b>Hands on</b></div>
+				<div class="h1">Show me examples</div>
+			</p>
+	 	</div>
 	</body>
 </html>
-
