--- a/hire.html
+++ b/hire.html
@@ -16,42 +16,30 @@
 		</div>
 		<div class="main_title_separator"></div>
 		<div class="section">
-			<div class="fields">
-				<div>
-					<b>
-						<span class="h2">
-							Engineering
-						</span>
-					</b>
-					<span class="h3">
-						Data into information
-					</span>
-				</div>
-				<div>
-					<b>
-						<span class="h2">
-							Analytics
-						</span>
-					</b>
-					<span class="h3">
-						Information into insights
-					</span>
-				</div>
-				<div>
-					<b>
-						<span class="h2">
-							Design
-						</span>
-					</b>
-					<span class="h3">
-						Insights into knowledge
-					</span>
-				</div>
-		 	</div>
+			<span class="h2">
+				<b>Engineering</b>
+			</span>
+			<span class="h3">
+				Data into information
+			</span><br>
+			<span class="h2">
+				<b>Analytics</b>
+			</span>
+			<span class="h3">
+				Information into insights
+			</span><br>
+			<span class="h2">
+				<b>Design</b>
+			</span>
+			<span class="h3">
+			Insights into knowledge
+			</span><br>
 		</div>
 		<div class="section">
 			<p class="service">
-				<div class="h2"><b>Audits</b></div><br>
+				<div class="h2">
+					<b>Audits</b>
+				</div><br>
 				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
 				In a fast-paced environment rarely it is possible to move things forward 
 				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
@@ -59,7 +47,9 @@
 				Let's discover together how to increase your efficiency.
 			</p>
 			<p class="service">
-				<div class="h2"><b>Consultancy</b></div><br>
+				<div class="h2">
+					<b>Consultancy</b>
+				</div><br>
 				<b>Are you satisfied about how your organisation consumes data?</b><br>
 				How much does a manual and repetitive data manipulation cost you?
 				Are there inefficiencies hidden within your processes?
@@ -67,7 +57,9 @@
 				Let's dive into these questions to find out answers and more opportunities.
 			</p>
 			<p class="service">
-				<div class="h2"><b>Training</b></div><br>
+				<div class="h2">
+					<b>Training</b>
+				</div><br>
 				<b>Leaders let actions speak by themselves.</b><br>
 				Allow your team to be self-sufficient,
 				with the ability to build and maintain your own custom solutions.
@@ -76,7 +68,9 @@
 			</p>
 	 	</div>
 		<div class="section">
-			<div class="h2"><b>Tech stack</b></div>
+			<div class="h2">
+				<b>Tech stack</b>
+			</div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank" rel="noopener">
@@ -196,7 +190,9 @@
 			</ul>
 		</div>
 		<div class="section">
-			<div class="h2"><b>Trusted by</b></div>
+			<div class="h2">
+				<b>Trusted by</b>
+			</div>
 			<ul class="icon_list">
 				<li class="icon_list__element">
 					<a href="https://www.guess.eu" target="_blank" rel="noopener">
@@ -241,10 +237,12 @@
 			</ul>
 		</div>
 		<div class="section">
-			<p class="service">
-				<div class="h2"><b>Hands on</b></div>
-				<div class="h1">Show me examples</div>
-			</p>
+			<div class="h2">
+				<b>Hands on</b>
+			</div>
+			<div class="h1">
+				Show me examples
+			</div>
 	 	</div>
 	</body>
 </html>
