--- a/hire.html
+++ b/hire.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Data Engineering - Analytics - Design</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
-	    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    	<link rel="stylesheet" href="hire.css"/>
+  	<meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+    <link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
 		<div class="main_title_separator"></div>
@@ -16,40 +16,40 @@
 		</div>
 		<div class="main_title_separator"></div>
 		<div class="section">
-			<span class="h2">
+			<span class="sub_title h2">
 				<b>Engineering</b>
 			</span>
-			<span class="h3">
+			<span class="sub_title h3">
 				Data into information
 			</span><br>
-			<span class="h2">
+			<span class="sub_title h2">
 				<b>Analytics</b>
 			</span>
-			<span class="h3">
+			<span class="sub_title h3">
 				Information into insights
 			</span><br>
-			<span class="h2">
+			<span class="sub_title h2">
 				<b>Design</b>
 			</span>
-			<span class="h3">
+			<span class="sub_title h3">
 			Insights into knowledge
 			</span><br>
 		</div>
 		<div class="section">
-			<p class="service">
-				<div class="h2">
+			<div class="service">
+				<div class="sub_title h2">
 					<b>Audits</b>
-				</div><br>
+				</div>
 				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
 				In a fast-paced environment rarely it is possible to move things forward 
 				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
 				often just observing things from different point of views.
 				Let's discover together how to increase your efficiency.
-			</p>
+			</div>
 			<p class="service">
-				<div class="h2">
+				<div class="sub_title h2">
 					<b>Consultancy</b>
-				</div><br>
+				</div>
 				<b>Are you satisfied about how your organisation consumes data?</b><br>
 				How much does a manual and repetitive data manipulation cost you?
 				Are there inefficiencies hidden within your processes?
@@ -57,9 +57,9 @@
 				Let's dive into these questions to find out answers and more opportunities.
 			</p>
 			<p class="service">
-				<div class="h2">
+				<div class="sub_title h2">
 					<b>Training</b>
-				</div><br>
+				</div>
 				<b>Leaders let actions speak by themselves.</b><br>
 				Allow your team to be self-sufficient,
 				with the ability to build and maintain your own custom solutions.
@@ -68,7 +68,7 @@
 			</p>
 	 	</div>
 		<div class="section">
-			<div class="h2">
+			<div class="sub_title h2">
 				<b>Tech stack</b>
 			</div>
 			<ul class="icon_list">
@@ -190,7 +190,7 @@
 			</ul>
 		</div>
 		<div class="section">
-			<div class="h2">
+			<div class="sub_title h2">
 				<b>Trusted by</b>
 			</div>
 			<ul class="icon_list">
@@ -237,12 +237,10 @@
 			</ul>
 		</div>
 		<div class="section">
-			<div class="h2">
+			<div class="sub_title h2">
 				<b>Hands on</b>
 			</div>
-			<div class="h1">
-				Show me examples
-			</div>
+      <a href="work.html" target="_blank" rel="noopener" class="h1 to_next">Find out more, show me examples</a>
 	 	</div>
 	</body>
 </html>
