--- a/index.html
+++ b/index.html
@@ -5,26 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Roberto Malcotti" content="Meet Roberto and learn more about him.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="index.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <header>
-      <div class="header_separator"></div>
-      <div class="header_main"></div>      
-        <p class="main_title">
-          Roberto Malcotti
-        </p>
-          <a href="#Contact">Contact</a><br>
-          <a href="#Technology">Technology</a><br>
-          <a href="#Creativity">Creativity</a><br>
-          <a href="#Languages">Languages</a><br>
-          <a href="#Hire">Hire me</a>
-      </div>
-      <div class="header_separator"></div>
-    </header>
-    <div class="intro">
-      <p class="content">
+    <div class="main_title_separator"></div>
+    <div class="main_title h1">
+      <b>Roberto</b> Malcotti<br>
+    </div>
+    <div class="main_title_separator"></div>
+    <div class="section">
+      <div class="content">
         Roberto is a digital native with 10 years of professional experience in the field of data,
         intersecting engineering, analytics and design.
         He owns a Bachelor degree in Management Engineering from
@@ -36,31 +26,60 @@
         As freelancer, he helps companies to get more out from their data.
         In his free time online, he explores the interaction between art and technology,
         while offline, he leverages his ability to move, communicate, write and read.
-      </p>
+      </div>
     </div>
-    <div class="section" id="Contact">
-      <div class="sub_title">
-        Contact
+    <div class="section">
+      <div class="sub_title h2">
+        <b>Contact</b>
       </div>
-      <div style="text-align:center">
-        <p class="content">
-          robimalco (at) gmail (dot) com
-        </p>
-        <p class="content">
-            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter" target="_blank" rel="noopener"></a>
-            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook" target="_blank" rel="noopener"></a>
-            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin" target="_blank" rel="noopener"></a>
-            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube" target="_blank" rel="noopener"></a>
-            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud" target="_blank" rel="noopener"></a>
-            <a href="https://github.com/robimalco" class="fa fa-github" target="_blank" rel="noopener"></a>
-        </p>
-      </div>
+      <ul class="icon_list">
+        <li class="icon_list__element">
+          <a href="https://mobile.twitter.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/twitter.png" class="icon_list__logo" alt="twitter" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://github.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/github.png" class="icon_list__logo" alt="github" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://www.linkedin.com/in/malcotti" target="_blank" rel="noopener">
+            <img src="images/social/linkedin.png" class="icon_list__logo" alt="linkedin" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow" target="_blank" rel="noopener">
+            <img src="images/social/youtube.png" class="icon_list__logo" alt="youtube" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://www.facebook.com/RMALCOTT" target="_blank" rel="noopener">
+            <img src="images/social/facebook.png" class="icon_list__logo" alt="facebook" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://soundcloud.com/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/soundcloud.png" class="icon_list__logo" alt="soundcloud" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://angel.co/u/robimalco" target="_blank" rel="noopener">
+            <img src="images/social/angel.png" class="icon_list__logo" alt="angel" loading="lazy">
+          </a>
+        </li>
+        <li class="icon_list__element">
+          <a href="https://www.meetup.com/it-IT/members/172332422/" target="_blank" rel="noopener">
+            <img src="images/social/meetup.png" class="icon_list__logo" alt="meetup" loading="lazy">
+          </a>
+        </li>
+      </ul>
     </div>
     <div class="section" id="Technology">
-      <div class="sub_title">
-        Technology
+      <div class="sub_title h2">
+        <b>Technology</b>
       </div>
-      <p class="content">
+      <div class="content">
         Technology is shaping any thinkable area.
         Roberto has the opportunity to ride this wave making a living out of it.
         Back in 2012, a data expert was appetibile on the market if proficient with Microsoft Excel.
@@ -68,13 +87,13 @@
         Nowadays is not enough, a professional is complete only with machine learning skills.
         You can talk to Roberto about any of these topics, about anything regarding data,
         almost anything about computers, and if you would, anything else.
-      </p>
+      </div>
     </div>
     <div class="section" id="Creativity">
-      <div class="sub_title">
-        Creativity
+      <div class="sub_title h2">
+        <b>Creativity</b>
       </div>
-      <p class="content">
+      <div class="content">
         A profile can acquire technical skills in multiple ways.
         Firstly, with academical education, secondly with work experience,
         thirdly following ad-hoc courses, lastly, developing personal projects.
@@ -84,13 +103,13 @@
         This framework requires a constant amount of fresh energy, which can only
         be obtained choosing a healty lifestyle. Roberto's work reflects this attitude,
         and his creativity gladly follows him along his journey.
-      </p>
+      </div>
     </div>
     <div class="section" id="Languages">
-      <div class="sub_title">
-        Languages
+      <div class="sub_title h2">
+        <b>Languages</b>
       </div>
-      <p class="content">
+      <div class="content">
         Roberto considers languages the most valuable asset an individual might have.  
         He utopically believes that if any human being would be able to speak any language,
         wars and inequalities would disappear.
@@ -99,20 +118,19 @@
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic conversations.
         Currently learning Chinese following a life goal project.
-      </p>
+      </div>
     </div>
     <div class="section" id="Hire">
-      <div class="sub_title">
-        Hire me
+      <div class="sub_title h2">
+        <b>Hire me</b>
       </div>
-      <p class="content">
+      <div class="content">
         Starting a new project, interacting with people, understanding requirements,
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is de facto standard.
         In this hyper connected world, along this rollercoast, having trustful partners is a must.<br>
-        <a href="hire.html" target="_blank" rel="noopener">Find out more.</a>
-      </p>
+        <a href="hire.html" target="_blank" rel="noopener" class="h1 to_next">Find out more.</a>
+      </div>
     </div>
-  <div></div>
   </body>
 </html>
