complete rebuilt css

--- a/hire.html
+++ b/hire.html
@@ -18,19 +18,19 @@
 		<div class="section">
 			<span class="sub_title h2">
 				<b>Engineering</b>
-			</span>
+			</span><br class="mobile-break">
 			<span class="sub_title h3">
 				Data into information
 			</span><br>
 			<span class="sub_title h2">
 				<b>Analytics</b>
-			</span>
+			</span><br class="mobile-break">
 			<span class="sub_title h3">
 				Information into insights
 			</span><br>
 			<span class="sub_title h2">
 				<b>Design</b>
-			</span>
+			</span><br class="mobile-break">
 			<span class="sub_title h3">
 			Insights into knowledge
 			</span><br>
@@ -40,31 +40,37 @@
 				<div class="sub_title h2">
 					<b>Audits</b>
 				</div>
-				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
-				In a fast-paced environment rarely it is possible to move things forward 
-				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
-				often just observing things from different point of views.
-				Let's discover together how to increase your efficiency.
+				<div class="content">
+					<b>Your data are not moving fluidly, and I know why.</b><br>
+					In a fast-paced environment rarely it is possible to move things forward 
+					while leveraging data flow's quality. Expertises are required to tackle bottle necks,
+					often just observing things from different point of views.
+					Let's discover together how to increase your efficiency.
+				</div>
 			</div>
 			<p class="service">
 				<div class="sub_title h2">
 					<b>Consultancy</b>
 				</div>
-				<b>Are you satisfied about how your organisation consumes data?</b><br>
-				How much does a manual and repetitive data manipulation cost you?
-				Are there inefficiencies hidden within your processes?
-				How much knowledge is lost because of lack of fluidity?
-				Let's dive into these questions to find out answers and more opportunities.
+				<div class="content">
+					<b>Are you satisfied about how your organisation consumes data?</b><br>
+					How much does a manual and repetitive data manipulation cost you?
+					Are there inefficiencies hidden within your processes?
+					How much knowledge is lost because of lack of fluidity?
+					Let's dive into these questions to find out answers and more opportunities.
+				</div>
 			</p>
 			<p class="service">
 				<div class="sub_title h2">
 					<b>Training</b>
 				</div>
-				<b>Leaders let actions speak by themselves.</b><br>
-				Allow your team to be self-sufficient,
-				with the ability to build and maintain your own custom solutions.
-				A homogeneous technical growth with the implicit goal to implement a true data driven culture.
-				Talk less, build more. Never take a non data-drive decision again.
+				<div class="content">
+					<b>Never take a non data driven decision again.</b><br>
+					Allow your team to be self-sufficient,
+					with the ability to develop and maintain your own custom solutions.
+					A homogeneous technical growth with the implicit goal to implement a true data driven culture.
+					Hypothesize less, build more.
+				</div>
 			</p>
 	 	</div>
 		<div class="section">
