--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Roberto Malcotti" content="Meet Roberto and learn more about him.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="new.css"/>
   </head>
   <body>
     <div class="main_title_separator"></div>
