--- a/hire.html
+++ b/hire.html
@@ -10,9 +10,9 @@
 	<body>
 		<div class="main_title_separator"></div>
 		<div class="main_title h1">
-			<b>Data</b> Engineering<br>
-			<b>‎‎‏‏‎Data</b> Analytics<br>
-			<b>‏‏‎‏‎Data</b> Design
+			<b>Data</b><br class="mobile-break">Engineering<br>
+			<b>‎‎‏‏‎Data</b><br class="mobile-break">Analytics<br>
+			<b>‏‏‎‏‎Data</b><br class="mobile-break">Design
 		</div>
 		<div class="main_title_separator"></div>
 		<div class="section">
