--- a/hire.html
+++ b/hire.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="main_title_separator"></div>
+		<div class="main_title_separator__up"></div>
 		<div class="main_title h1">
 			<b>Data</b><br class="mobile-break">Engineering<br>
 			<b>‎‎‏‏‎Data</b><br class="mobile-break">Analytics<br>
 			<b>‏‏‎‏‎Data</b><br class="mobile-break">Design
 		</div>
-		<div class="main_title_separator"></div>
+		<div class="main_title_separator__down"></div>
 		<div class="section">
 			<span class="sub_title h2">
 				<b>Engineering</b>
@@ -242,11 +242,17 @@
 				</li>
 			</ul>
 		</div>
-		<div class="section">
+		<div class="section last_section">
 			<div class="sub_title h2">
 				<b>Hands on</b>
 			</div>
-      <a href="work.html" target="_blank" rel="noopener" class="h1 to_next">Find out more, show me examples</a>
+      <div class="content">
+				Through the years and the constant work, it has been possible to acquire new techniques,
+				continuing to improve and to evolve those already present.
+				The quality of the results reflects this growth.
+				Nothing beats practical examples for clarifying ideas.<br>
+      	<a href="work.html" target="_blank" rel="noopener" class="h1 to_next">Find out more</a>
+      </div>
 	 	</div>
 	</body>
 </html>
