--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div class="main_title_separator"></div>
+    <div class="main_title_separator__up"></div>
     <div class="main_title h1">
       <b>Roberto</b> Malcotti<br>
     </div>
-    <div class="main_title_separator"></div>
+    <div class="main_title_separator__down"></div>
     <div class="section">
       <div class="content">
         Roberto is a digital native with 10 years of professional experience in the field of data,
